tests/specs/check/module_resolution_bundler_sloppy_imports/main.ts
import type { foo } from "./types";

const value: foo = 1;
console.log(value);
